# AWS_AgentCore_TechResidential

./: .gitignore  README.md
.copilot/: README.md  copilot.yml
agents/: README.md  agent_deployment.ipynb  enhanced_strands_claude_with_nova.py  first_stage_agent.ipynb  first_stage_gateway.ipynb  invoke_agent.ipynb  live_view_with_nova_act.py  pyproject.toml  requirements.txt  techresidential_utils.py
agents/.ipynb_checkpoints/: first_stage_agent-checkpoint.ipynb  first_stage_gateway-checkpoint.ipynb  lambda_credentials-checkpoint.py  lambda_development-checkpoint.ipynb  lambda_get_prompt_file-checkpoint.py
agents/01-browser-with-NovaAct/: 02_agentcore-browser-tool-live-view-with-nova-act.ipynb  basic_browser_with_nova_act.py  captcha_with_nova_act.py  live_view_with_nova_act.py
agents/01-browser-with-NovaAct/.ipynb_checkpoints/: result-checkpoint.txt
agents/01-strands-with-bedrock-model/: .bedrock_agentcore.yaml  Dockerfile
agents/01-transform-lambda-into-mcp-tools/: 01-gateway-target-lambda.ipynb
agents/first_stage_deployment/: .bedrock_agentcore.yaml  first_stage_agent-Copy1.ipynb  first_stage_agent.py  first_stage_deployment.ipynb  requirements.txt
agents/first_stage_deployment/.ipynb_checkpoints/: first_stage_deployment-checkpoint.ipynb  invoke_agent-checkpoint.ipynb
docs/: PROJECT_STRUCTURE.md  SPECIFICATION.md  configure_aws_resources.md  implementation_roadmap.md  sample_prompt.txt  system_diagram_updated.mmd
lambda/: agent_trigger.js  lambda_credentials.py  lambda_get_prompt_file.py
samples/: quick_start_guide.md
terraform/: main.tf  (+2 more)
(+26 files in other folders)
